--- a/MDTManagment/MDTManagment/Views/Orders/AddOrderPage.xaml
+++ b/MDTManagment/MDTManagment/Views/Orders/AddOrderPage.xaml
@@ -38,40 +38,40 @@
             <TextBlock TextAlignment="Center" VerticalAlignment="Center">Вид поръчка:</TextBlock>
         </Grid>
         <Grid Grid.Column="0" Grid.Row="1">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">DateОfReceipt Дата?:</TextBlock>
+            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Дата на постъпване:</TextBlock>
         </Grid>
         <Grid Grid.Column="0" Grid.Row="2">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">DeadLine Краен срок:</TextBlock>
+            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Краен срок:</TextBlock>
         </Grid>
         <Grid Grid.Column="0" Grid.Row="3">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Price Цена:</TextBlock>
+            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Цена:</TextBlock>
         </Grid>
         <Grid Grid.Column="0" Grid.Row="4">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">FacialArc?:</TextBlock>
+            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Лицева дъга:</TextBlock>
         </Grid>
         <Grid Grid.Column="0" Grid.Row="5">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Articulator?:</TextBlock>
+            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Артикулатор:</TextBlock>
         </Grid>
         <Grid Grid.Column="0" Grid.Row="6">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">MetalTest?:</TextBlock>
+            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Метална проба:</TextBlock>
         </Grid>
         <Grid Grid.Column="0" Grid.Row="7">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">CeramicTest?:</TextBlock>
+            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Керамична проба:</TextBlock>
         </Grid>
         <Grid Grid.Column="0" Grid.Row="8">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">ToothColour Цвят на зъб:</TextBlock>
+            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Цвят на зъб:</TextBlock>
         </Grid>
         <Grid Grid.Column="0" Grid.Row="9">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">SpecialRequirements Специални изисквания:</TextBlock>
+            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Специални изисквания:</TextBlock>
         </Grid>
         <Grid Grid.Column="0" Grid.Row="10">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">DeclaredIngredients Използвани съставки (материали) ?:</TextBlock>
+            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Заявени съставки:</TextBlock>
         </Grid>
         <Grid Grid.Column="0" Grid.Row="11">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">TypeOfImpressionMaterial ?:</TextBlock>
+            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Отпечатъчен материал:</TextBlock>
         </Grid>
         <Grid Grid.Column="0" Grid.Row="12">
-            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Dentist Изпълняващ зъболекар?:</TextBlock>
+            <TextBlock TextAlignment="Center" VerticalAlignment="Center">Зъболекар:</TextBlock>
         </Grid>
 
 
@@ -94,10 +94,10 @@
                     <ColumnDefinition></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <Grid Grid.Column="0">
-                    <Button Height="20" Command="{Binding FacialArcIsFalse}" Content="False" Margin="0,0,3,0"></Button>
+                    <Button Height="20" Command="{Binding FacialArcIsFalse}" Content="Не" Margin="0,0,3,0"></Button>
                 </Grid>
                 <Grid Grid.Column="1">
-                    <Button Height="20" Command="{Binding FacialArcIsTrue}" Content="True"></Button>
+                    <Button Height="20" Command="{Binding FacialArcIsTrue}" Content="Да"></Button>
                 </Grid>
             </Grid>
         </Grid>
@@ -108,10 +108,10 @@
                     <ColumnDefinition></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <Grid Grid.Column="0">
-                    <Button Height="20" Command="{Binding ArticulatorIsFalse}" Content="False" Margin="0,0,3,0"></Button>
+                    <Button Height="20" Command="{Binding ArticulatorIsFalse}" Content="Не" Margin="0,0,3,0"></Button>
                 </Grid>
                 <Grid Grid.Column="1">
-                    <Button Height="20" Command="{Binding ArticulatorIsTrue}" Content="True"></Button>
+                    <Button Height="20" Command="{Binding ArticulatorIsTrue}" Content="Да"></Button>
                 </Grid>
             </Grid>
         </Grid>
@@ -122,10 +122,10 @@
                     <ColumnDefinition></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <Grid Grid.Column="0">
-                    <Button Height="20" Command="{Binding MetalTestIsFalse}" Content="False" Margin="0,0,3,0"></Button>
+                    <Button Height="20" Command="{Binding MetalTestIsFalse}" Content="Не" Margin="0,0,3,0"></Button>
                 </Grid>
                 <Grid Grid.Column="1">
-                    <Button Height="20" Command="{Binding MetalTestIsTrue}" Content="True"></Button>
+                    <Button Height="20" Command="{Binding MetalTestIsTrue}" Content="Да"></Button>
                 </Grid>
             </Grid>
         </Grid>
@@ -136,10 +136,10 @@
                     <ColumnDefinition></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <Grid Grid.Column="0">
-                    <Button Height="20" Command="{Binding CeramicTestIsFalse}" Content="False" Margin="0,0,3,0"></Button>
+                    <Button Height="20" Command="{Binding CeramicTestIsFalse}" Content="Не" Margin="0,0,3,0"></Button>
                 </Grid>
                 <Grid Grid.Column="1">
-                    <Button Height="20" Command="{Binding CeramicTestIsTrue}" Content="True"></Button>
+                    <Button Height="20" Command="{Binding CeramicTestIsTrue}" Content="Да"></Button>
                 </Grid>
             </Grid>
         </Grid>
