--- a/MDTManagment/MDTManagment/Views/Dentists/DentistsPage.xaml
+++ b/MDTManagment/MDTManagment/Views/Dentists/DentistsPage.xaml
@@ -9,7 +9,6 @@
       d:DesignHeight="300" d:DesignWidth="300"
       Title="DentistsPage">
 
-
     <StackPanel>
 
         <Grid>
@@ -21,9 +20,7 @@
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
             <Grid Grid.Column="0" Grid.Row="0">
-                <!--<Button Width="40" Height="40" FontSize="15" Background="Transparent" BorderBrush="Transparent" Click="ExpandMenu_Click" RenderTransformOrigin="0.5,0.5">-->
                 <Button Click="ExpandMenu_Click" Margin="0,-3,1,0">
-
                     <Button.RenderTransform>
                         <TransformGroup>
                             <ScaleTransform ScaleY="-1"/>
@@ -33,18 +30,13 @@
                         </TransformGroup>
                     </Button.RenderTransform>
                     <Button.Template>
-
                         <ControlTemplate>
-                            <!--Content="|||"-->
-
                             <ContentControl>
                                 <Border x:Name="ButtonBorder1" CornerRadius="0,0,0,0" BorderBrush="DeepSkyBlue" BorderThickness="3">
                                     <StackPanel>
                                         <TextBlock Height="30" Width="30" ><TextBlock Margin="7.8,3.2,0,0" FontSize="15" Text="|||" ></TextBlock></TextBlock>
                                     </StackPanel>
                                 </Border>
-
-
                             </ContentControl>
                             <ControlTemplate.Triggers>
                                 <Trigger Property="Button.IsPressed" Value="True">
@@ -57,23 +49,13 @@
             </Grid>
 
             <Grid Grid.Column="1" Grid.Row="0" Height="30">
-                <!--<StackPanel Orientation="Horizontal" Margin="130,0,0,0">-->
                 <Button Height="30" Command="{Binding NavigateToAddDentist}" Background="Transparent" BorderBrush="Transparent">
                     <StackPanel Orientation="Horizontal">
-                        <!--Margin="10,0,15,0">-->
                         <Image Height="20" VerticalAlignment="Center" Source="/Resources/add.png"></Image>
                         <TextBlock FontSize="11.5" Text="Добави зъболекар" VerticalAlignment="Center" Margin="5,0,0,0"></TextBlock>
                     </StackPanel>
                 </Button>
-                <!--<Button Height="30" Command="{Binding DeletePatient}" Background="Transparent" BorderBrush="Transparent">
-                        <StackPanel Orientation="Horizontal" Margin="10,0,15,0">
-                            <Image Height="20" VerticalAlignment="Center" Source="/Resources/delete.png"></Image>
-                            <TextBlock FontSize="11.5" Text="Delete Patient" VerticalAlignment="Center" Margin="5,0,0,0"></TextBlock>
-                        </StackPanel>
-                    </Button>-->
-                <!--</StackPanel>-->
             </Grid>
-
 
 
         </Grid>
@@ -91,8 +73,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition ></RowDefinition>
             </Grid.RowDefinitions>
-            
-            
+
 
             <Grid Grid.Column="0">
                 <StackPanel>
@@ -123,7 +104,7 @@
                     <Button Command="{Binding NavToActivities}" Background="Transparent" BorderBrush="Transparent" HorizontalContentAlignment="Left" >
                         <StackPanel Orientation="Horizontal">
                             <Image Margin="10,0,10,0" Height="25" Source="/Resources/3.png"></Image>
-                            <TextBlock FontSize="11.5" VerticalAlignment="Center">Дейности</TextBlock>
+                            <TextBlock FontSize="11.5" VerticalAlignment="Center">Дейности?</TextBlock>
                         </StackPanel>
                     </Button>
                 </StackPanel>
@@ -131,7 +112,7 @@
             </Grid>
 
 
-            <GridSplitter x:Name="GridSplitter1" Grid.Column="1" HorizontalAlignment="Stretch" Background="DeepSkyBlue"></GridSplitter>
+            <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch" Background="DeepSkyBlue"></GridSplitter>
 
             <Grid Grid.Column="2">
                 <Grid.ColumnDefinitions>
@@ -145,30 +126,18 @@
                         <Button Command="{Binding DisplayDentist}" Margin="5,3,2,3" Content="Покажи данни за избрания зъболекар"></Button>
 
                         <ListView ItemsSource="{Binding Dentists}" IsSynchronizedWithCurrentItem="True"  SelectedItem="{Binding SelectedDentist, Mode=TwoWay}">
+                            <ListView.ItemContainerStyle>
+                                <Style TargetType="{x:Type ListViewItem}">
+                                    <Setter Property="BorderBrush" Value="LightGray" />
+                                    <Setter Property="BorderThickness" Value="0,0,0,1" />
+                                </Style>
+                            </ListView.ItemContainerStyle>
                             <ListView.View>
                                 <GridView>
                                     <GridView.Columns>
                                         <GridViewColumn Header="Име" DisplayMemberBinding="{Binding Name}"/>
                                         <GridViewColumn Header="Презиме" DisplayMemberBinding="{Binding MiddleName}"/>
                                         <GridViewColumn Header="Фамилия" DisplayMemberBinding="{Binding LastName}"/>
-
-                                            <!--DA SE IZTRIE PATIENT PAGE ZASHTOTO E NENUJEN-->
-                                        <!--<GridViewColumn Header="View">
-                                            <GridViewColumn.CellTemplate>
-                                                <DataTemplate>
-                                                    <StackPanel>
-                                                    -->
-                                        <!--<Button  Command="{Binding Path=DataContext.ViewPatientCommand, 
-                                                         RelativeSource={RelativeSource Mode=FindAncestor,      
-                                                         AncestorType={x:Type ItemsControl}} }"
-                                                         CommandParameter="{Binding Id}">Explicit</Button>-->
-                                        <!--
-                                                    </StackPanel>
-                                                </DataTemplate>
-                                            </GridViewColumn.CellTemplate>
-                                        </GridViewColumn>-->
-
-
                                     </GridView.Columns>
                                 </GridView>
                             </ListView.View>
@@ -206,8 +175,6 @@
                                     <TextBlock HorizontalAlignment="Right" Text="Фамилия:"></TextBlock>
                                     <TextBlock HorizontalAlignment="Right" Text="Контакт:"></TextBlock>
                                     <TextBlock HorizontalAlignment="Right" Text="Професионален опит:"></TextBlock>
-                                    <!--<TextBlock Text="___"></TextBlock>
-                                    <Button  Margin="0,0,10,0" HorizontalAlignment="Right" Content="Виж свързани поръчки:"></Button>-->
                                 </StackPanel>
                             </Grid>
                             <Grid Grid.Column="1">
@@ -217,101 +184,12 @@
                                     <TextBlock Margin="10,0,0,0" Text="{Binding Path=LastName, Mode=TwoWay}"></TextBlock>
                                     <TextBlock Margin="10,0,0,0" Text="{Binding Path=Contact, Mode=TwoWay}"></TextBlock>
                                     <TextBlock Margin="10,0,0,0" Text="{Binding Path=ProfessionalExperienceForDisplaying, Mode=TwoWay}"></TextBlock>
-                                    <!--<TextBlock Margin="10,0,0,0" Text="{Binding Path=DentistForDisplaying , Mode=TwoWay}">
-                                        <TextBox Text="{Binding Path=Name}"></TextBox>
-                                    </TextBlock>-->
-                                    <!--<TextBlock Text="___"></TextBlock>-->
-                                    <!--<Button Margin="30,0,0,0" HorizontalAlignment="Left" Content="Изтрий избрания пациент"></Button>-->
                                 </StackPanel>
                             </Grid>
                         </Grid>
                     </Grid>
                 </Grid>
-
-
             </Grid>
-
-
-
-
         </Grid>
-
-
     </StackPanel>
-
-
 </Page>
-
-
-<!--<PAGE>
-    
-    <StackPanel>
-
-        <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition MinWidth="220"></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-
-        <Grid Grid.Column="0">
-            
-            <ListView ItemsSource="{Binding Dentists}"
-                      IsSynchronizedWithCurrentItem="True"
-                      SelectedItem="{Binding SelectedDentist, Mode=TwoWay}">
-                <ListView.View>
-                    <GridView>
-                        <GridView.Columns>
-                            <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}"/>
-                            <GridViewColumn Header="LastName" DisplayMemberBinding="{Binding LastName}"/>
-                            <GridViewColumn Header="Information">
-                                <GridViewColumn.CellTemplate>
-                                    <DataTemplate>
-                                        <StackPanel>
-                                            <Button  Command="{Binding Path=DataContext.ViewDentistCommand, 
-                                                     RelativeSource={RelativeSource Mode=FindAncestor,      
-                                                     AncestorType={x:Type ItemsControl}} }"
-                                                     CommandParameter="{Binding Id}">Additional</Button>
-                                        </StackPanel>
-                                    </DataTemplate>
-                                </GridViewColumn.CellTemplate>
-                            </GridViewColumn>
-                        </GridView.Columns>
-                    </GridView>
-                </ListView.View>
-            </ListView>
-            
-        </Grid>
-
-        
-
-        <Grid Grid.Column="1">
-
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition Height="20"></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                </Grid.RowDefinitions>
-                <Grid Grid.Row="0">
-                    <Button  Command="{Binding NavigateToAddDentist}" Height="50" Width="50" VerticalAlignment="Bottom">
-                        <TextBlock TextWrapping="Wrap" TextAlignment="Center">Add Dentist</TextBlock>
-                    </Button>
-                </Grid>
-                <Grid Grid.Row="2">
-                    <Button  Command="{Binding DeleteDentist}" Height="50" Width="50" VerticalAlignment="Top">
-                        <TextBlock TextWrapping="Wrap" TextAlignment="Center">Delete Dentist</TextBlock>
-                    </Button>
-                </Grid>
-            </Grid>
-
-        </Grid>
-
-        
-        
-
-    </Grid>
-
-    </StackPanel>
-
-
-</Page>-->
