--- a/MDTManagment/MDTManagment/Views/HomePage.xaml
+++ b/MDTManagment/MDTManagment/Views/HomePage.xaml
@@ -9,9 +9,7 @@
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
       Title="HomePage">
-
     <StackPanel>
-
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="40"></ColumnDefinition>
@@ -21,9 +19,7 @@
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
             <Grid Grid.Column="0">
-                <!--<Button Width="40" Height="40" FontSize="15" Background="Transparent" BorderBrush="Transparent" Click="ExpandMenu_Click" RenderTransformOrigin="0.5,0.5">-->
                 <Button Click="ExpandMenu_Click" Margin="0,-3,1,0">
-
                     <Button.RenderTransform>
                         <TransformGroup>
                             <ScaleTransform ScaleY="-1"/>
@@ -33,18 +29,13 @@
                         </TransformGroup>
                     </Button.RenderTransform>
                     <Button.Template>
-
                         <ControlTemplate>
-                            <!--Content="|||"-->
-
                             <ContentControl>
                                 <Border x:Name="ButtonBorder1" CornerRadius="0,0,0,0" BorderBrush="DeepSkyBlue" BorderThickness="3">
                                     <StackPanel>
                                         <TextBlock Height="30" Width="30" ><TextBlock Margin="7.8,3.2,0,0" FontSize="15" Text="|||" ></TextBlock></TextBlock>
                                     </StackPanel>
                                 </Border>
-
-
                             </ContentControl>
                             <ControlTemplate.Triggers>
                                 <Trigger Property="Button.IsPressed" Value="True">
@@ -55,20 +46,16 @@
                     </Button.Template>
                 </Button>
             </Grid>
-
         </Grid>
-
         <Grid>
             <GridSplitter Height="3" HorizontalAlignment="Stretch" Background="DeepSkyBlue"></GridSplitter>
         </Grid>
-
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition MaxWidth="0" x:Name="MenuColumn"></ColumnDefinition>
                 <ColumnDefinition Width="3"></ColumnDefinition>
                 <ColumnDefinition ></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            
             <Grid Grid.Column="0">
                 <StackPanel>
                     <Button Command="{Binding NavToHome}" Background="Transparent" BorderBrush="Transparent" HorizontalContentAlignment="Left">
@@ -98,140 +85,53 @@
                     <Button Command="{Binding NavToActivities}" Background="Transparent" BorderBrush="Transparent" HorizontalContentAlignment="Left" >
                         <StackPanel Orientation="Horizontal">
                             <Image Margin="10,0,10,0" Height="25" Source="/Resources/3.png"></Image>
-                            <TextBlock FontSize="11.5" VerticalAlignment="Center">Дейности</TextBlock>
+                            <TextBlock FontSize="11.5" VerticalAlignment="Center">Дейности?</TextBlock>
                         </StackPanel>
                     </Button>
                 </StackPanel>
-
             </Grid>
-
-
-            <GridSplitter x:Name="GridSplitter1" Grid.Column="1" Height="900" HorizontalAlignment="Stretch" Background="DeepSkyBlue"></GridSplitter>
-
-
-
-
-
+            <GridSplitter Grid.Column="1" Height="900" HorizontalAlignment="Stretch" Background="DeepSkyBlue"></GridSplitter>
             <Grid Grid.Column="2">
-
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="550"></ColumnDefinition>
                     <ColumnDefinition></ColumnDefinition>
                 </Grid.ColumnDefinitions>
-
-
                 <Grid Grid.Column="0">
-                <ListView ItemsSource="{Binding Orders}">
-                    <ListView.ItemContainerStyle>
-                        <Style TargetType="ListViewItem">
-                            <Setter Property="Focusable" Value="False"/>
-                            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                        </Style>
-                    </ListView.ItemContainerStyle>
-                    <ListView.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <StackPanel Orientation="Vertical"></StackPanel>
-                        </ItemsPanelTemplate>
-                    </ListView.ItemsPanel>
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <controls:Tile Title="{Binding DeadLine}" Width="540"
-                                           Command="{Binding Path=DataContext.ViewOrderCommand, 
-                                                     RelativeSource={RelativeSource Mode=FindAncestor,      
-                                                     AncestorType={x:Type ItemsControl}} }"
-                                           Count="{Binding Type}">
-                            </controls:Tile>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
+                    <ListView ItemsSource="{Binding Orders}">
+                        <ListView.ItemContainerStyle>
+                            <Style TargetType="ListViewItem">
+                                <Setter Property="Focusable" Value="False"/>
+                                <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                            </Style>
+                        </ListView.ItemContainerStyle>
+                        <ListView.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <StackPanel Orientation="Vertical"></StackPanel>
+                            </ItemsPanelTemplate>
+                        </ListView.ItemsPanel>
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <controls:Tile Title="{Binding DeadLine}" Width="540"
+                                               Command="{Binding Path=DataContext.ViewOrderCommand, 
+                                                         RelativeSource={RelativeSource Mode=FindAncestor,      
+                                                         AncestorType={x:Type ItemsControl} } }"
+                                               Count="{Binding Type}">
+                                </controls:Tile>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
                 </Grid>
-                
                 <Grid Grid.Column="1">
-                    
                     <Grid.RowDefinitions>
                         <RowDefinition></RowDefinition>
                         <RowDefinition></RowDefinition>
                     </Grid.RowDefinitions>
                     <Grid Grid.Row="0" Margin="0,50,0,0">
-                    <Image Source="/Resources/99logo.jpg" Height="500"></Image>
-                    <TextBlock FontFamily="Forte" Margin="0,25,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="DeepSkyBlue" Text="MDT Managment" FontSize="30"></TextBlock>
-
+                        <Image Source="/Resources/logo.jpg" Height="500"></Image>
+                        <TextBlock FontFamily="Forte" Margin="0,25,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="DeepSkyBlue" Text="MDT Managment" FontSize="30"></TextBlock>
                     </Grid>
-                   
-                    
                 </Grid>
-
-
             </Grid>
-
-
-
         </Grid>
-
-
     </StackPanel>
-
-
 </Page>
-
-
-
-
-<!--TODO: DDDDDDDDDelete this-->
-
-
-<!--<Grid.RowDefinitions>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition Height="100"></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                </Grid.ColumnDefinitions>-->
-
-                <!--<Grid Grid.Column="0" Grid.Row="0" VerticalAlignment="Bottom">
-                    <StackPanel Height="80" Width="70">
-                        <Button Height="60" Width="70" Click="GoToPatientsPage_Cick" x:Name="PatientsButton">-->
-                            <!--<Button.Background>
-                            <ImageBrush x:Name="Avatar" ImageSource="avatar.png" Stretch="UniformToFill"/>
-                        </Button.Background>-->
-
-                            <!--<Button.Template>
-                                <ControlTemplate>
-                                    <Image Source="/avatar.png" Stretch="UniformToFill"></Image>
-                                </ControlTemplate>
-                            </Button.Template>-->
-
-                            <!--<ControlTemplate>
-                    <ControlTemplate.Triggers>
-                        <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="Transparent">
-                                -->
-                            <!--<Setter.Value>
-                                    <ImageBrush ImageSource="avatar.png" Stretch="UniformToFill"/>
-                                </Setter.Value>-->
-                            <!--
-                            </Setter>
-                        </Trigger>
-                    </ControlTemplate.Triggers>
-                </ControlTemplate>-->
-
-                        <!--</Button>
-                        <TextBlock Height="20" Text="Patients" TextAlignment="Center"></TextBlock>
-                    </StackPanel>
-                </Grid>-->
-                
-                
-                <!--<Grid Grid.Column="1" Grid.Row="0" VerticalAlignment="Bottom">
-                    <Button Height="60" Width="70" Click="GoToOrdersPage_Cick">Orders</Button>
-                </Grid>
-                <Grid Grid.Column="2" Grid.Row="0" VerticalAlignment="Bottom">
-                    <Button Height="60" Width="70" Click="GoToDentistsPage_Cick">Dentists</Button>
-                </Grid>
-                <Grid Grid.Column="0" Grid.Row="2" VerticalAlignment="Top">
-                    <Button Height="60" Width="70" Click="GoToActivitiesPage_Cick">Activities</Button>
-                </Grid> Grid Grid stackPanel Page-->
-
-
