--- a/MDTManagment/MDTManagment/Views/Patients/PatientsPage.xaml
+++ b/MDTManagment/MDTManagment/Views/Patients/PatientsPage.xaml
@@ -7,9 +7,7 @@
       xmlns:ViewModels ="clr-namespace:MDTManagment.ViewModels"
       d:DesignHeight="300" d:DesignWidth="300"
 	Title="PatientsPage">
-
     <StackPanel>
-
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="40"></ColumnDefinition>
@@ -19,9 +17,7 @@
                 <RowDefinition></RowDefinition>
             </Grid.RowDefinitions>
             <Grid Grid.Column="0" Grid.Row="0">
-                <!--<Button Width="40" Height="40" FontSize="15" Background="Transparent" BorderBrush="Transparent" Click="ExpandMenu_Click" RenderTransformOrigin="0.5,0.5">-->
                 <Button Click="ExpandMenu_Click" Margin="0,-3,1,0">
-
                     <Button.RenderTransform>
                         <TransformGroup>
                             <ScaleTransform ScaleY="-1"/>
@@ -31,18 +27,13 @@
                         </TransformGroup>
                     </Button.RenderTransform>
                     <Button.Template>
-
                         <ControlTemplate>
-                            <!--Content="|||"-->
-
                             <ContentControl>
                                 <Border x:Name="ButtonBorder1" CornerRadius="0,0,0,0" BorderBrush="DeepSkyBlue" BorderThickness="3">
                                     <StackPanel>
                                         <TextBlock Height="30" Width="30" ><TextBlock Margin="7.8,3.2,0,0" FontSize="15" Text="|||" ></TextBlock></TextBlock>
                                     </StackPanel>
                                 </Border>
-
-
                             </ContentControl>
                             <ControlTemplate.Triggers>
                                 <Trigger Property="Button.IsPressed" Value="True">
@@ -53,32 +44,18 @@
                     </Button.Template>
                 </Button>
             </Grid>
-
             <Grid Grid.Column="1" Grid.Row="0" Height="30">
-                <!--<StackPanel Orientation="Horizontal" Margin="130,0,0,0">-->
-                    <Button Height="30" Command="{Binding NavigateToAddPatient}" Background="Transparent" BorderBrush="Transparent">
-                    <StackPanel Orientation="Horizontal"> <!--Margin="10,0,15,0">-->
-                            <Image Height="20" VerticalAlignment="Center" Source="/Resources/add.png"></Image>
-                            <TextBlock FontSize="11.5" Text="Добави пациент" VerticalAlignment="Center" Margin="5,0,0,0"></TextBlock>
-                        </StackPanel>
-                    </Button>
-                    <!--<Button Height="30" Command="{Binding DeletePatient}" Background="Transparent" BorderBrush="Transparent">
-                        <StackPanel Orientation="Horizontal" Margin="10,0,15,0">
-                            <Image Height="20" VerticalAlignment="Center" Source="/Resources/delete.png"></Image>
-                            <TextBlock FontSize="11.5" Text="Delete Patient" VerticalAlignment="Center" Margin="5,0,0,0"></TextBlock>
-                        </StackPanel>
-                    </Button>-->
-                <!--</StackPanel>-->
+                <Button Height="30" Command="{Binding NavigateToAddPatient}" Background="Transparent" BorderBrush="Transparent">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Height="20" VerticalAlignment="Center" Source="/Resources/add.png"></Image>
+                        <TextBlock FontSize="11.5" Text="Добави пациент" VerticalAlignment="Center" Margin="5,0,0,0"></TextBlock>
+                    </StackPanel>
+                </Button>
             </Grid>
-            
-            
-            
         </Grid>
-
         <Grid>
             <GridSplitter Height="3" HorizontalAlignment="Stretch" Background="DeepSkyBlue"></GridSplitter>
         </Grid>
-
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition MaxWidth="0" x:Name="MenuColumn"></ColumnDefinition>
@@ -88,7 +65,6 @@
             <Grid.RowDefinitions>
                 <RowDefinition ></RowDefinition>
             </Grid.RowDefinitions>
-            
             <Grid Grid.Column="0">
                 <StackPanel>
                     <Button Command="{Binding NavToHome}" Background="Transparent" BorderBrush="Transparent" HorizontalContentAlignment="Left">
@@ -118,75 +94,51 @@
                     <Button Command="{Binding NavToActivities}" Background="Transparent" BorderBrush="Transparent" HorizontalContentAlignment="Left" >
                         <StackPanel Orientation="Horizontal">
                             <Image Margin="10,0,10,0" Height="25" Source="/Resources/3.png"></Image>
-                            <TextBlock FontSize="11.5" VerticalAlignment="Center">Дейности</TextBlock>
+                            <TextBlock FontSize="11.5" VerticalAlignment="Center">Дейности?</TextBlock>
                         </StackPanel>
                     </Button>
                 </StackPanel>
-
             </Grid>
-
-
-            <GridSplitter x:Name="GridSplitter1" Grid.Column="1" HorizontalAlignment="Stretch" Background="DeepSkyBlue"></GridSplitter>
-
-
-
-
-
+            <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch" Background="DeepSkyBlue"></GridSplitter>
             <Grid Grid.Column="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition></ColumnDefinition>
                     <ColumnDefinition></ColumnDefinition>
                 </Grid.ColumnDefinitions>
-
                 <Grid Grid.Column="0">
                     <StackPanel>
-
                         <Button Command="{Binding DisplayPatient}" Margin="5,3,2,3" Content="Покажи данни за избрания пациент"></Button>
-
                         <ListView ItemsSource="{Binding Patients}" IsSynchronizedWithCurrentItem="True"  SelectedItem="{Binding SelectedPatient, Mode=TwoWay}">
+                            <ListView.ItemContainerStyle>
+                                <Style TargetType="{x:Type ListViewItem}">
+                                    <Setter Property="BorderBrush" Value="LightGray" />
+                                    <Setter Property="BorderThickness" Value="0,0,0,1" />
+                                </Style>
+                            </ListView.ItemContainerStyle>
                             <ListView.View>
                                 <GridView>
                                     <GridView.Columns>
                                         <GridViewColumn Header="Име" DisplayMemberBinding="{Binding FirstName}"/>
                                         <GridViewColumn Header="Презиме" DisplayMemberBinding="{Binding Surname}"/>
                                         <GridViewColumn Header="Фамилия" DisplayMemberBinding="{Binding Family}"/>
-                                        
-                                        <!--DA SE IZTRIE PATIENT PAGE ZASHTOTO E NENUJEN-->
-                                        <!--<GridViewColumn Header="View">
-                                            <GridViewColumn.CellTemplate>
-                                                <DataTemplate>
-                                                    <StackPanel>
-                                                    --><!--<Button  Command="{Binding Path=DataContext.ViewPatientCommand, 
-                                                         RelativeSource={RelativeSource Mode=FindAncestor,      
-                                                         AncestorType={x:Type ItemsControl}} }"
-                                                         CommandParameter="{Binding Id}">Explicit</Button>--><!--
-                                                    </StackPanel>
-                                                </DataTemplate>
-                                            </GridViewColumn.CellTemplate>
-                                        </GridViewColumn>-->
-
-
                                     </GridView.Columns>
                                 </GridView>
                             </ListView.View>
                         </ListView>
-
                     </StackPanel>
-
                 </Grid>
-
                 <Grid Grid.Column="1">
                     <Grid>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="1*"></RowDefinition> <!--how to make this fit to window and not being cropped-->
+                            <RowDefinition Height="1*"></RowDefinition>
+                            <!--how to make this fit to window and not being cropped-->
                             <RowDefinition MinHeight="800" Height="2*" AllowDrop="False"></RowDefinition>
                         </Grid.RowDefinitions>
                         <Grid Grid.Row="0">
                             <StackPanel>
                                 <Button Command="{Binding DeletePatient}" Margin="2,3,5,3" Content="Изтрий избрания пациент"></Button>
-
-                                <Image Height="400" Margin="10" Source="/Resources/1.png" ></Image> <!--Source="{Binding SelectedPatient.PortraitPicPath}"-->
-
+                                <Image Height="400" Margin="10" Source="/Resources/1.png" ></Image>
+                                <!--Source="{Binding SelectedPatient.PortraitPicPath}"-->
                             </StackPanel>
                         </Grid>
                         <Grid Grid.Row="1">
@@ -203,8 +155,6 @@
                                     <TextBlock HorizontalAlignment="Right" Text="Адрес:"></TextBlock>
                                     <TextBlock HorizontalAlignment="Right" Text="Контакт:"></TextBlock>
                                     <TextBlock HorizontalAlignment="Right" Text="Зъболекар:"></TextBlock>
-                                    <!--<TextBlock Text="___"></TextBlock>
-                                    <Button  Margin="0,0,10,0" HorizontalAlignment="Right" Content="Виж свързани поръчки:"></Button>-->
                                 </StackPanel>
                             </Grid>
                             <Grid Grid.Column="1">
@@ -216,23 +166,12 @@
                                     <TextBlock Margin="10,0,0,0" Text="{Binding Path=Address, Mode=TwoWay}"></TextBlock>
                                     <TextBlock Margin="10,0,0,0" Text="{Binding Path=PhoneNumber, Mode=TwoWay}"></TextBlock>
                                     <TextBlock Margin="10,0,0,0" Text="{Binding Path=DentistForDisplaying , Mode=TwoWay}"></TextBlock>
-                                    <!--<TextBlock Text="___"></TextBlock>-->
-                                    <!--<Button Margin="30,0,0,0" HorizontalAlignment="Left" Content="Изтрий избрания пациент"></Button>-->
                                 </StackPanel>
                             </Grid>
                         </Grid>
                     </Grid>
                 </Grid>
-
-
             </Grid>
-
-
-
         </Grid>
-
-
     </StackPanel>
-
-
 </Page>
