--- a/MDTManagment/MDTManagment/Views/Patients/AddPatientPage.xaml
+++ b/MDTManagment/MDTManagment/Views/Patients/AddPatientPage.xaml
@@ -68,7 +68,7 @@
                 Height="20"
                 ItemsSource="{Binding Dentists}" 
                 SelectedValue="{Binding NewPatient.DentistId}"
-                SelectedValuePath="Id"
+                SelectedValuePath="Number"
                 DisplayMemberPath="Name">
             </ComboBox>
         </Grid>
